--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale-1.0" />
   <meta http-equiv="Content-Security-Policy" content="default-src 'self'; style-src 'self' 'unsafe-inline'; img-src 'self' data:; font-src 'self' data:; script-src 'self';" />
   <title>Bat Browser</title>
   <link rel="stylesheet" href="../../fonts/all.min.css" />
@@ -119,6 +119,7 @@
             <li><a href="#search"><i class="fa-solid fa-magnifying-glass"></i> Search</a></li>
             <li><a href="#identity"><i class="fa-solid fa-user-secret"></i> Identity</a></li>
             <li><a href="#network"><i class="fa-solid fa-network-wired"></i> Network</a></li>
+            <li><a href="#privacy"><i class="fa-solid fa-shield-halved"></i> Privacy</a></li>
             <li><a href="#ai"><i class="fa-solid fa-robot"></i> AI Assistant</a></li>
             <li><a href="#hotkeys"><i class="fa-solid fa-keyboard"></i> Hotkeys</a></li>
           </ul>
@@ -209,6 +210,27 @@
                         </div>
                     </div>
                 </div>
+            </section>
+            <section id="privacy" class="settings-section" style="display: none;" data-keywords="privacy history data clear cache">
+              <h1>Privacy and Security</h1>
+              <div class="setting-item" data-keywords="history limit size storage">
+                <div class="setting-label">
+                    <h2>History Limit</h2>
+                    <p>The maximum number of history entries to keep for each tab.</p>
+                </div>
+                <div class="setting-control">
+                    <input type="number" id="history-limit-input" min="10" max="1000" step="10">
+                </div>
+              </div>
+              <div class="setting-item" data-keywords="clear browsing data history all tabs">
+                <div class="setting-label">
+                    <h2>Clear All History</h2>
+                    <p>Permanently delete the browsing history from all tabs.</p>
+                </div>
+                <div class="setting-control">
+                    <button id="clear-all-history-btn" class="danger-button"><i class="fa-solid fa-trash"></i> Clear History</button>
+                </div>
+              </div>
             </section>
             <section id="ai" class="settings-section" style="display: none;" data-keywords="ai artificial intelligence gemini api key assistant">
               <h1>AI Assistant</h1>
@@ -312,6 +334,21 @@
               </div>
               <ul id="font-list"></ul>
             </div>
+        </div>
+    </div>
+  </div>
+
+  <div id="history-modal" class="hidden">
+    <div class="history-dialog">
+        <div class="history-header">
+            <h2 id="history-modal-title">URL History</h2>
+            <button id="history-modal-close-btn" title="Close"><i class="fa-solid fa-xmark"></i></button>
+        </div>
+        <div class="history-controls">
+            <button id="history-clear-btn" class="danger-button"><i class="fa-solid fa-trash"></i> Clear History for This Tab</button>
+        </div>
+        <div class="history-list-container">
+          <ul id="history-list"></ul>
         </div>
     </div>
   </div>
